# med-multimodal-qa-moe

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  symptom_dinov2_normalized.yaml  symptom_siglip_normalized.yaml
configs/: base.yaml  data.yaml  model.yaml  train.yaml
data/samples/: sample_data.jsonl
datasets/: __init__.py  medical_dataset.py
models/: __init__.py  adapters.py  language_moe.py  multimodal_model.py  router.py  vision_encoder.py  vision_moe.py
notebooks/: 01_data_exploration.ipynb  02_router_labeling.ipynb  exploration.ipynb
scripts/: augment_healmqa.py  build_splits.py  download_data.py  evaluate.py  inference_demo.py  merge_datasets.py  normalize_healmqa.py  predict_samples.py  prepare_data.py  prepare_healmqa.py  prepare_medquad.py  prepare_textvqa_medical_subset.py  preprocess.py  pseudo_label_domains.py  train.py  train_adapters.py  train_baseline.py  train_router.py
src/: __init__.py
src/data/: collator.py  dataset.py  preprocessing.py  splits.py
src/evaluation/: __init__.py  generation_metrics.py  qualitative.py  router_metrics.py
src/models/: __init__.py  adapters.py  backbone.py  fusion.py  generator.py  multimodal_moe_qa.py  router.py
src/training/: __init__.py  losses.py  metrics.py  trainer.py  utils.py
src/utils/: __init__.py  config.py  io.py  logging.py  seed.py
tests/: test_dataset.py  test_model_forward.py  test_router.py
trainers/: __init__.py  trainer.py
utils/: __init__.py  helpers.py  logging.py  metrics.py
