[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-multimodal-qa-moe"
version = "0.1.0"
description = "Lightweight multimodal medical QA research starter."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = []
